<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black_trans40"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:src="@drawable/ic_navigate_before_black_24dp"
            android:tint="@color/blue" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:src="@drawable/ic_navigate_next_black_24dp"
            android:tint="@color/blue" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:src="@drawable/ic_settings_black_24dp"
            android:tint="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_toRightOf="@+id/layout_menu"
        android:background="@color/black_trans40"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_course_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Course_Number"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_course_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_large" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_course_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/Course_Name"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_large" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/Hole_Number"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_hole_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/Hole_Name"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_hole_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_large"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>

